--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,37 @@
 main {
+  width: 100%;
+  }
+
+#top {
+  display: flex;
+}
+aside {
+  width: 200px;
+  margin: 0;
+}
+
+section {
   display: flex;
 }
 
-.products {
-  display: inline-flex;
+section img {
+  width: 200px;
+  height: 200px;
+  
 }
+
+article {
+  height: 300px;
+  width: 80%;
+  margin-left: 20%;
+}
+
 .products img {
   height: 5%;
   width: 5;
+}
+
+#chart {
+  height: 700px;
+  width: 700px;
 }
